tests/miniJava/pos/001043_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) if ( 0 ) { } else { } else if ( 0 ) { } else { } } }
