tests/miniJava/neg/006818_mutation.MiniJava
class 0 java { public static void Main ( String [ ] java ) { { } } }
